--- a/index.html
+++ b/index.html
@@ -37,15 +37,28 @@
 
     <footer class="footer">
         <div class="footer__content">
-            <img src="img/logo.svg" alt="genesis black logo" class="footer__content__logo">
-            <ul class="footer__content__items nav__items">
-                <li class="footer__content__item nav__item">
-                    <a href="pages/details.html">Projects</a>
-                </li>
-                <li class="footer__content__item nav__item">
-                    <a href="pages/contact.html">Contact</a>
-                </li>
-            </ul>
+            <div class="footer__menu">
+                <img src="img/logo.svg" alt="genesis black logo" class="footer__content__logo">
+                <ul class="footer__content__items nav__items">
+                    <li class="footer__content__item nav__item">
+                        <a href="pages/details.html">Projects</a>
+                    </li>
+                    <li class="footer__content__item nav__item">
+                        <a href="pages/contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer__content__icons">
+                <a href="dribble.com" target="_blank" class="footer__content__icon">
+                    <i class="fa-brands fa-dribbble"></i>
+                </a>
+                <a href="instagram.com" target="_blank" class="footer__content__icon">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="twitter.com" target="_blank" class="footer__content__icon">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+            </div>
         </div>
     </footer>
     
