index content and classes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,191 @@
         </nav>
     </header>
 
-    <main class="main"></main>
+    <main class="main">
+        <!--ABOUT-->
+        <section class="about">
+            <div class="awards__left">
+                <p class="awards__left__text">
+                    Shooting Stars
+                </p>
+                <h1 class="awards__left__title">
+                    Hello, I’m Bakhtiyar Sattarov,
+                    <span class="awards__left__title__span">product designer</span>
+                    with experience in studios and startups
+                </h1>
+            </div>
+            <div class="awards__right">
+                <div class="awards__right__line"></div>
+                <p class="awards__right__text">
+                    Design is about progress 
+                </p>
+            </div>
+        </section>
+        <!--GALLERY-->
+        <section class="gallery">
+            <div class="gallery__grid grid__container">
+                <div class="gallery__grid__item grid__element first">
+                    <img src="img/img-main-1.png" alt="collage of statue">
+                </div>
+                <div class="gallery__grid__item grid__element second">
+                    <img src="img/img-main-2.png" alt="collage of man sitting on cactus">
+                </div>
+                <div class="gallery__grid__item grid__element third">
+                    <img src="img/img-main-3.png" alt="collage of little man standing on big persons head">
+                </div>
+                <div class="gallery__grid__item grid__element fourth">
+                    <img src="img/img-main-4.png" alt="collage of man standing in flower field">
+                </div>
+                <div class="gallery__grid__item grid__element fifth">
+                    <img src="img/img-main-5.png" alt="collage of man in glasses">
+                </div>
+                <div class="gallery__grid__item grid__element sext">
+                    <img src="img/img-main-6.png" alt="collage of statue of liberty">
+                </div>
+                <div class="gallery__grid__item grid__element seventh">
+                    <img src="img/img-main-7.png" alt="collage of woman walking in the clouds">
+                </div>
+                <div class="gallery__grid__item grid__element eight">
+                    <img src="img/img-main-8.png" alt="collage of woman walking on the desert">
+                </div>
+                <div class="gallery__grid__item grid__element ninth">
+                    <img src="img/img-main-9.png" alt="collage of man with broken face and flowers going out from it">
+                </div>
+                <div class="gallery__grid__item grid__element tenth">
+                    <img src="img/img-main-10.png" alt="collage of man with eyes covered">
+                </div>
+                <div class="gallery__grid__item grid__element eleventh">
+                    <img src="img/img-main-11.png" alt="collage of piano and human">
+                </div>
+                <div class="gallery__grid__item grid__element twelfth">
+                    <img src="img/img-main-12.png" alt="collage of landscape">
+                </div>
+            </div>
+        </section>
+        <!--AWARDS-->
+        <section class="awards">
+            <div class="awards__introduction">
+                <h3 class="awards__introduction__title">
+                    We love work hard and explore new things that’s why 
+                    we cover lot of things. Check our service list 
+                    and view details
+                </h3>
+                <div class="awards__introduction__lists">
+                    <div class="awards__introduction__lists__left">
+                        <p class="awards__introduction__lists__text">
+                            Multimedia
+                        </p>
+                        <p class="awards__introduction__lists__text">
+                            Interactive Design
+                        </p>
+                        <p class="awards__introduction__lists__text">
+                            Branding
+                        </p>
+                    </div>
+                    <div class="awards__introduction__lists__right">
+                        <p class="awards__introduction__lists__text">
+                            Creative design
+                        </p>
+                        <p class="awards__introduction__lists__text">
+                            Packaging
+                        </p>
+                        <p class="awards__introduction__lists__text">
+                            Coding
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="awards__content">
+                <div class="awards__content__line"></div>
+                    <div class="awards__content__grid grid__container">
+                        <div class="awards__content__grid__item grid__element first">
+                            <p class="awards__content__title">
+                                Awwwards
+                            </p>
+                        </div>
+                        <div class="awards__content__grid__item grid__element second">
+                            <p class="awards__content__subtitle">
+                                Site of the day
+                            </p>
+                        </div>
+                        <div class="awards__content__grid__item grid__element third">
+                            <p class="awards__content__subtitle">
+                                Best navigation
+                            </p>
+                        </div>
+                        <div class="awards__content__grid__item grid__element fourth">
+                            <p class="awards__content__text">
+                                Genesis UI Kit
+                                <span>
+                                    Application that helps to find nearest sport centres
+                                </span>
+                            </p>
+                        </div>
+                        <div class="awards__content__grid__item grid__element fifth">
+                            <p class="awards__content__text">
+                                Genesis Template
+                                <span>
+                                    Application that helps to find nearest sport centres
+                                </span>
+                            </p>
+                        </div>
+                        <div class="awards__content__grid__item grid__element sexth">
+                            <p class="awards__content__text">
+                                2018
+                            </p>
+                        </div>
+                        <div class="awards__content__grid__item grid__element seventh">
+                            <p class="awards__content__text">
+                                2018
+                            </p>
+                        </div>
+                    </div>
+                <div class="awards__content__line"></div>
+                <div class="awards__content__grid grid__container">
+                    <div class="awards__content__grid__item grid__element first">
+                        <p class="awards__content__title"></p>
+                    </div>
+                    <div class="awards__content__grid__item grid__element second">
+                        <p class="awards__content__subtitle">
+                            Site of the day
+                        </p>
+                    </div>
+                    <div class="awards__content__grid__item grid__element third">
+                        <p class="awards__content__subtitle">
+                            Best navigation
+                        </p>
+                    </div>
+                    <div class="awards__content__grid__item grid__element fourth">
+                        <p class="awards__content__text">
+                            Genesis UI Kit
+                            <span>
+                                Application that helps to find nearest sport centres
+                            </span>
+                        </p>
+                    </div>
+                    <div class="awards__content__grid__item grid__element fifth">
+                        <p class="awards__content__text">
+                            Genesis Template
+                            <span>
+                                Application that helps to find nearest sport centres
+                                </span>
+                        </p>
+                    </div>
+                    <div class="awards__content__grid__item grid__element sexth">
+                        <p class="awards__content__text">
+                            2017
+                        </p>
+                    </div>
+                    <div class="awards__content__grid__item grid__element seventh">
+                        <p class="awards__content__text">
+                            2016
+                        </p>
+                    </div>
+                </div>
+                <div class="awards__content__line"></div>
+            </div>
+        </section>
+    </main>
 
     <footer class="footer">
         <div class="footer__content">
