about index styling done

--- a/index.html
+++ b/index.html
@@ -36,19 +36,20 @@
     <main class="main">
         <!--ABOUT-->
         <section class="about">
-            <div class="awards__left">
-                <p class="awards__left__text">
+            <div class="about__left">
+                <p class="about__left__text">
                     Shooting Stars
                 </p>
-                <h1 class="awards__left__title">
-                    Hello, I’m Bakhtiyar Sattarov,
-                    <span class="awards__left__title__span">product designer</span>
-                    with experience in studios and startups
+                <h1 class="about__left__title">
+                    Hello, I’m Bakhtiyar Sattarov, <br />
+                    <span class="about__left__title__span">product designer</span>
+                    with experience <br />
+                    in studios and startups
                 </h1>
             </div>
-            <div class="awards__right">
-                <div class="awards__right__line"></div>
-                <p class="awards__right__text">
+            <div class="about__right">
+                <div class="about__right__line"></div>
+                <p class="about__right__text">
                     Design is about progress 
                 </p>
             </div>
