gallery index styling done

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="gallery__grid__item grid__element fifth">
                     <img src="img/img-main-5.png" alt="collage of man in glasses">
                 </div>
-                <div class="gallery__grid__item grid__element sext">
+                <div class="gallery__grid__item grid__element sixth">
                     <img src="img/img-main-6.png" alt="collage of statue of liberty">
                 </div>
                 <div class="gallery__grid__item grid__element seventh">
