--- a/index.html
+++ b/index.html
@@ -99,84 +99,90 @@
         <section class="awards">
             <div class="awards__introduction">
                 <h3 class="awards__introduction__title">
-                    We love work hard and explore new things that’s why 
-                    we cover lot of things. Check our service list 
-                    and view details
+                    We love work hard and explore new things <br />
+                    that’s why we cover lot of things. Check our <br />
+                    service list and view details
                 </h3>
                 <div class="awards__introduction__lists">
                     <div class="awards__introduction__lists__left">
-                        <p class="awards__introduction__lists__text">
+                        <a href="#" class="awards__introduction__lists__text">
                             Multimedia
-                        </p>
-                        <p class="awards__introduction__lists__text">
+                        </a>
+                        <a href="#" class="awards__introduction__lists__text">
                             Interactive Design
-                        </p>
-                        <p class="awards__introduction__lists__text">
+                        </a>
+                        <a href="#" class="awards__introduction__lists__text">
                             Branding
-                        </p>
+                        </a>
                     </div>
                     <div class="awards__introduction__lists__right">
-                        <p class="awards__introduction__lists__text">
+                        <a href="#" class="awards__introduction__lists__text">
                             Creative design
-                        </p>
-                        <p class="awards__introduction__lists__text">
+                        </a>
+                        <a href="#" class="awards__introduction__lists__text">
                             Packaging
-                        </p>
-                        <p class="awards__introduction__lists__text">
+                        </a>
+                        <a href="#" class="awards__introduction__lists__text">
                             Coding
-                        </p>
+                        </a>
                     </div>
                 </div>
             </div>
             <div class="awards__content">
                 <div class="awards__content__line"></div>
-                    <div class="awards__content__grid grid__container">
-                        <div class="awards__content__grid__item grid__element first">
-                            <p class="awards__content__title">
-                                Awwwards
-                            </p>
-                        </div>
-                        <div class="awards__content__grid__item grid__element second">
-                            <p class="awards__content__subtitle">
-                                Site of the day
-                            </p>
-                        </div>
-                        <div class="awards__content__grid__item grid__element third">
-                            <p class="awards__content__subtitle">
-                                Best navigation
-                            </p>
-                        </div>
-                        <div class="awards__content__grid__item grid__element fourth">
-                            <p class="awards__content__text">
-                                Genesis UI Kit
-                                <span>
-                                    Application that helps to find nearest sport centres
-                                </span>
-                            </p>
-                        </div>
-                        <div class="awards__content__grid__item grid__element fifth">
-                            <p class="awards__content__text">
-                                Genesis Template
-                                <span>
-                                    Application that helps to find nearest sport centres
-                                </span>
-                            </p>
-                        </div>
-                        <div class="awards__content__grid__item grid__element sexth">
-                            <p class="awards__content__text">
-                                2018
-                            </p>
-                        </div>
-                        <div class="awards__content__grid__item grid__element seventh">
-                            <p class="awards__content__text">
-                                2018
-                            </p>
-                        </div>
+                <div class="awards__content__grid grid__container">
+                    <div class="awards__content__grid__item grid__element first">
+                        <p class="awards__content__title">
+                            Awwwards
+                        </p>
+                     </div>
+                    <div class="awards__content__grid__item grid__element second">
+                        <p class="awards__content__subtitle">
+                            Site of the day
+                        </p>
                     </div>
+                    <div class="awards__content__grid__item grid__element third">
+                        <p class="awards__content__subtitle">
+                            Best navigation
+                        </p>
+                    </div>
+                    <div class="awards__content__grid__item grid__element fourth">
+                        <p class="awards__content__text">
+                            Genesis UI Kit <br/>
+                            <span>
+                                Application that helps to <br/>
+                                find nearest sport <br/>
+                                centres
+                            </span>
+                        </p>
+                    </div>
+                    <div class="awards__content__grid__item grid__element fifth">
+                        <p class="awards__content__text">
+                            Genesis Template <br/>
+                            <span>
+                                Application that helps to <br/>
+                                find nearest sport <br/>
+                                centres
+                            </span>
+                        </p>
+                    </div>
+                    <div class="awards__content__grid__item grid__element sixth">
+                        <p class="awards__content__year">
+                            2018
+                        </p>
+                    </div>
+                    <div class="awards__content__grid__item grid__element seventh">
+                        <p class="awards__content__year">
+                            2018
+                        </p>
+                    </div>
+                </div>
                 <div class="awards__content__line"></div>
                 <div class="awards__content__grid grid__container">
                     <div class="awards__content__grid__item grid__element first">
-                        <p class="awards__content__title"></p>
+                        <p class="awards__content__title">
+                            CSSDesignAwards
+                        </p>
                     </div>
                     <div class="awards__content__grid__item grid__element second">
                         <p class="awards__content__subtitle">
@@ -190,27 +196,31 @@
                     </div>
                     <div class="awards__content__grid__item grid__element fourth">
                         <p class="awards__content__text">
-                            Genesis UI Kit
+                            Genesis UI Kit <br/>
                             <span>
-                                Application that helps to find nearest sport centres
+                                Application that helps to <br/>
+                                find nearest sport <br/>
+                                centres
                             </span>
                         </p>
                     </div>
                     <div class="awards__content__grid__item grid__element fifth">
                         <p class="awards__content__text">
-                            Genesis Template
+                            Genesis Template <br/>
                             <span>
-                                Application that helps to find nearest sport centres
+                                Application that helps to <br/>
+                                find nearest sport <br/>
+                                centres
                                 </span>
                         </p>
                     </div>
                     <div class="awards__content__grid__item grid__element sexth">
-                        <p class="awards__content__text">
+                        <p class="awards__content__year">
                             2017
                         </p>
                     </div>
                     <div class="awards__content__grid__item grid__element seventh">
-                        <p class="awards__content__text">
+                        <p class="awards__content__year">
                             2016
                         </p>
                     </div>
