contact styling done

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -50,20 +50,14 @@
             <div class="contact__right">
                 <form action="" class="contact__right__form" autocomplete="off">
                     <!--NAME-->
-                    <label for="name" class="contact__right__form__label">
-                        Name
-                    </label>
-                    <input type="text" id="name" class="contact__right__form__input" required>
+                    <input type="text" id="name" class="contact__right__form__input" placeholder="Name" required>
+                    <div class="contact__right__form__line"></div>
                     <!--EMAIL-->
-                    <label for="email" class="contact__right__form__label">
-                        Email
-                    </label>
-                    <input type="email" id="email" class="contact__right__form__input" required>
+                    <input type="email" id="email" class="contact__right__form__input" placeholder="Email" required>
+                    <div class="contact__right__form__line"></div>
                     <!--MESSAGE-->
-                    <label for="message" class="contact__right__form__label">
-                        Message
-                    </label>
-                    <input type="message" id="message" class="contact__right__form__input" required>
+                    <input type="message" id="message" class="contact__right__form__input" placeholder="Message" required>
+                    <div class="contact__right__form__line"></div>
                     <button class="contact__right__form__btn">
                         Submit
                     </button>
