logo is a link to main page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <header class="header">
         <nav class="header__nav">
-            <img src="img/logo.svg" alt="genesis black logo" class="header__nav__logo">
+            <a href="index.html" class="header__nav__logo"><img src="img/logo.svg" alt="genesis black logo"></a>
             <ul class="header__nav__items nav__items">
                 <li class="header__nav__item nav__item">
                     <a href="pages/details.html">Projects</a>
